syntax = "proto3";

package api;

option go_package = "github.com/axsh/openvdc/api";

import "model.proto";
import "cluster.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service InstanceConsole {
  rpc Attach(stream ConsoleIn) returns (stream ConsoleOut){}
}

message ConsoleIn {
  string buf = 1;
  string instance_id = 2 [json_name="instance_id"];
}

message ConsoleOut {
  enum Channel {
    stdout = 0;
    stderr = 1;
  }
  Channel ch = 1;
  string buf = 2;
}


service Instance {
  rpc Create (CreateRequest) returns (CreateReply){}
  rpc Start (StartRequest) returns (StartReply){}
  rpc Run (CreateRequest) returns (RunReply){}
  rpc Stop (StopRequest) returns (StopReply){}
  rpc Destroy (DestroyRequest) returns (DestroyReply){}
  rpc Reboot (RebootRequest) returns (RebootReply){}
  rpc Console (ConsoleRequest) returns (ConsoleReply){}
  rpc Show (InstanceIDRequest) returns (InstanceReply){}
  rpc List (InstanceListRequest) returns (InstanceListReply){}
  rpc Log (InstanceLogRequest) returns (stream InstanceLogReply){}
  rpc Event (InstanceEventRequest) returns (stream InstanceEventReply){}
}

message RunReply {
  string instance_id = 1 [json_name="instance_id"];
  //string resource_id = 2; // Obsolete
}

message StopRequest{
  string instance_id = 1 [json_name="instance_id"];
}
message StopReply {
  string instance_id = 1 [json_name="instance_id"];
}

message DestroyRequest{
  string instance_id = 1 [json_name="instance_id"];
}
message DestroyReply {
  string instance_id = 1 [json_name="instance_id"];
}

message ConsoleRequest{
  string instance_id = 1 [json_name="instance_id"];
}
message ConsoleReply {
  string instance_id = 1 [json_name="instance_id"];
  model.Console.Transport type = 2;
  string address = 3;
  model.AuthenticationType authType = 4;
}

message CreateRequest{
  //string resource_id = 1; // Obsolete
  model.Template template = 2;
  bool auto_recovery = 3;
}
message CreateReply{
  string instance_id = 1 [json_name="instance_id"];
}

message StartRequest {
  string instance_id = 1 [json_name="instance_id"];
}
message StartReply {
  string instance_id = 1 [json_name="instance_id"];
}

message RebootRequest {
  string instance_id = 1 [json_name="instance_id"];
}
message RebootReply {
  string instance_id = 1 [json_name="instance_id"];
}

message InstanceIDRequest {
  oneof Key {
    string ID = 1;
    string Name = 2;
  }
}

message InstanceReply {
  string ID = 1;
  model.Instance instance = 2;
}

message InstanceListRequest {
  message PageRequest {
    int32 offset = 1;
    int32 limit = 2;
  }
  PageRequest page = 1;
  message Filter {
    model.InstanceState.State state = 1;
  }
  Filter filter = 2;
}

message InstanceListReply {
  message PageReply {
    int32 total = 1;
    int32 current = 2;
    int32 limit = 3;
  }
  PageReply page = 1;
  message InstanceListItem {
    string id = 1;
    model.InstanceState.State state = 2;
  }
  repeated InstanceListItem items = 2;
}

message InstanceLogRequest {
  InstanceIDRequest Target = 1;
}

message InstanceLogReply {
  repeated string Line = 1;
}

message InstanceEventRequest {
  InstanceIDRequest Target = 1;
}

message InstanceEventReply {
  enum EventType {
    EventNone = 0;
    EventState = 1;
  }
  EventType event_type = 1 [json_name="event_type"];
  google.protobuf.Timestamp event_at = 2 [json_name="event_at"];
  oneof Body {
    model.InstanceState state = 3;
  }
}

